test/conformance/chainsaw/reports/admission/namespaceselector-assert/report-expected.yaml
apiVersion: wgpolicyk8s.io/v1beta1
kind: PolicyReport
metadata:
  namespace: test-audit-reports-namespacesselector
  ownerReferences:
  - apiVersion: v1
    kind: Pod
    name: audit-pod
scope:
  apiVersion: v1
  kind: Pod
  name: audit-pod
  namespace: test-audit-reports-namespacesselector
results:
- policy: test-audit-reports-namespacesselector
  result: fail
  rule: test-audit-reports-namespacesselector
