test/conformance/chainsaw/reports/admission/namespaceselector-assert/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: namespaceselector
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: test-audit-reports-namespacesselector
  - name: step-02
    try:
    - apply:
        file: pods.yaml
    - assert:
        file: pods.yaml
  - name: step-03
    try:
    - assert:
        file: report-expected.yaml
    - error:
        file: report-unexpected.yaml
